parallax mobile overflow fix

--- a/play/CSS/parallax.css
+++ b/play/CSS/parallax.css
@@ -2,7 +2,8 @@
     margin:0;
     padding:0;
     font-family: 'helvetica', san-serif;
-    box-sizing: border-box
+    box-sizing: border-box;
+    overflow: hidden
 }
 
 body{
